k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-gateway
  template:
    metadata:
      labels:
        app: grpc-gateway
      annotations:
        sidecar.istio.io/inject: "false"
        # proxy.istio.io/config: |
        #   proxyMetadata:
        #     ISTIO_META_HTTP_PROTOCOL: "http"
    spec:
      containers:
      - name: grpc-gateway
        image: ghcr.io/impit-mpit/api-gateway-master:latest
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-gateway
spec:
  selector:
    app: grpc-gateway
  ports:
  - port: 80
    targetPort: 8080
    name: http
