k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-gateway
  namespace: nmost
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "nmost.site"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "nmost.site"
    tls:
      mode: SIMPLE
      credentialName: nmost-site-tls
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-gateway-vs
  namespace: nmost
spec:
  hosts:
  - "nmost.site"
  gateways:
  - grpc-gateway
  http:
  - match:
    - uri:
        prefix: /api/
    rewrite:
      uri: /
    route:
    - destination:
        host: grpc-gateway
        port:
          number: 80
      timeout: 3600s  # Увеличиваем общий таймаут
    websocketUpgrade: true  # Включаем поддержку WebSocket
    corsPolicy:
      allowOrigins:
      - exact: "*"
      allowMethods:
      - GET
      - POST
      - PUT
      - OPTIONS
      allowHeaders:
      - DNT
      - X-CustomHeader
      - Keep-Alive
      - User-Agent
      - X-Requested-With
      - If-Modified-Since
      - Cache-Control
      - Content-Type
      - Authorization
      maxAge: "24h"
