k8s/auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-auth
  namespace: nmost
spec:
  selector:
    matchLabels:
      app: grpc-gateway
  jwtRules:
    - issuer: "auth-service"
      jwksUri: "http://auth-service.nmost.svc.cluster.local:8080/jwts"
      forwardOriginalToken: true

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: grpc-auth-policy
  namespace: nmost
spec:
  selector:
    matchLabels:
      app: grpc-gateway
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["nmost"]
    # Публичные GET запросы
    - to:
        - operation:
            methods: ["GET", "POST"]
            paths: ["*"]
    
    # Административные операции (требуют JWT)
    # - to:
    #     - operation:
    #         methods: ["POST", "PUT", "DELETE"]
    #         paths: ["/api/admin/*"]
    #   when:
    #     - key: request.auth.claims[roles]
    #       values: ["admin"]
    
    # CORS preflight requests
    - to:
        - operation:
            methods: ["OPTIONS"]
